{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Default",
            "id": "8c6d17df-763f-4b17-9cc1-fc5398494ce8",
            "actions": [
                {
                    "name": "Weld",
                    "type": "Button",
                    "id": "b5da155c-304e-4bc8-b885-cf1e49bc1e97",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Unweld",
                    "type": "Button",
                    "id": "a593b6b7-f9c1-456d-a6b0-3c55bfe97914",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "0e9a1e21-1629-4677-b404-d3f2e2ecaf65",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerPress",
                    "type": "Button",
                    "id": "129f9087-06a7-4286-b442-1c07bab36a07",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate1",
                    "type": "Button",
                    "id": "3ca59cfe-3665-4026-894c-54bca518723a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "dfd795b6-5d40-48cb-a3e8-d4dbdb7d1246",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "VehicleAxisVertical",
                    "type": "Value",
                    "id": "fb53fe5b-f6ba-46da-9475-a19683fc0320",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "VehicleAxisHorizontal",
                    "type": "Value",
                    "id": "69693f0b-7b03-48ba-8063-6e19ca4cb50f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotate2",
                    "type": "Button",
                    "id": "9d12c8e9-bf4e-460a-b71b-a631a245df00",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6363c8a1-9a21-487d-b519-e7da301d4f25",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Weld",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f46b20ff-4044-43fd-a74c-2e8b8929769b",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Unweld",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37535f0f-b1ff-4154-88b4-5066de19d57b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0af4f6a0-c728-4839-8c95-883666bfc4f4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ccca593-1fb3-4467-a538-4bdb63f8aa33",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3fbf62a-b156-49dc-b5f6-4aea69291609",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Vertical",
                    "id": "bc25282d-e298-44c0-a1ac-a0d8c6f1c0a7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VehicleAxisVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0b5500ac-b0aa-46c7-861f-06e06d6eed62",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VehicleAxisVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8a17f547-1b1c-4d73-a50a-856a5553e00f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VehicleAxisVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Horizontal",
                    "id": "09eec171-56d5-4094-b98e-0e64e9f98fe1",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VehicleAxisHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "400463a7-764c-48df-9b5a-02e0adec9c26",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VehicleAxisHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1472866f-d790-4512-9d22-e658fa5381b3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VehicleAxisHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c7b20dbf-06b8-4441-8c28-946799c4dc8b",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}